Add many new functions
Co-authored-by: CuzImBisonratte <CuzImBisonratte@users.noreply.github.com>

--- a/blog/blog_entry.css
+++ b/blog/blog_entry.css
@@ -1,6 +1,19 @@
 body:nth-child(1) {
     margin: 3em;
 }
-h1, h2, h3, h4, h5, h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     text-align: center;
+}
+
+p,
+ol,
+ul {
+    margin-left: 33em;
+    margin-right: 33em;
 }
