--- a/style.css
+++ b/style.css
@@ -1,25 +1,66 @@
+/* share-regular - latin */
+
+@font-face {
+    font-family: 'Share';
+    font-style: normal;
+    font-weight: 400;
+    src: url('/src/fonts/share-v16-latin-regular.eot');
+    /* IE9 Compat Modes */
+    src: local(''), url('/src/fonts/share-v16-latin-regular.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/src/fonts/share-v16-latin-regular.woff2') format('woff2'), /* Super Modern Browsers */
+    url('/src/fonts/share-v16-latin-regular.woff') format('woff'), /* Modern Browsers */
+    url('/src/fonts/share-v16-latin-regular.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('/src/fonts/share-v16-latin-regular.svg#Share') format('svg');
+    /* Legacy iOS */
+}
+
+
+/* share-700 - latin */
+
+@font-face {
+    font-family: 'Share';
+    font-style: normal;
+    font-weight: 700;
+    src: url('/src/fonts/share-v16-latin-700.eot');
+    /* IE9 Compat Modes */
+    src: local(''), url('/src/fonts/share-v16-latin-700.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
+    url('/src/fonts/share-v16-latin-700.woff2') format('woff2'), /* Super Modern Browsers */
+    url('/src/fonts/share-v16-latin-700.woff') format('woff'), /* Modern Browsers */
+    url('/src/fonts/share-v16-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
+    url('/src/fonts/share-v16-latin-700.svg#Share') format('svg');
+    /* Legacy iOS */
+}
+
+* {
+    font-family: "Share";
+}
+
 html,
 body {
     margin: 0;
     padding: 0;
     left: 0;
     top: 0;
+}
 
-}   
 body {
     background-color: rgb(22, 22, 22);
     color: #ffffff;
     cursor: default;
 }
 
-nav > ul {
+
+/* Nav style */
+
+nav>ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
     background-color: #333;
 }
-nav > ul > li {
+
+nav>ul>li {
     float: left;
     display: inline;
 }
@@ -32,7 +73,7 @@ nav > ul > li {
     float: right;
 }
 
-nav > ul > li a {
+nav>ul>li a {
     display: block;
     color: white;
     text-align: center;
@@ -40,11 +81,48 @@ nav > ul > li a {
     text-decoration: none;
 }
 
+
 /* Change the link color to #111 (black) on hover */
-nav > ul > li a:hover {
+
+nav>ul>li a:hover {
     background-color: #111;
 }
+
+
+/* Footer style */
+
+.footer {
+    margin-top: 150px;
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #333;
+    color: #efefef;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    bottom: 0;
+    width: 100%;
+}
+
+.footer>div>a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px;
+    text-decoration: none;
+}
+
+
+/* Change the link color to #111 (black) on hover */
+
+.footer>div>a:hover {
+    background-color: #111;
+}
+
+
 /* Error box bumms */
+
 #output_message_inner {
     cursor: pointer;
     background-color: #5b66aa;
@@ -57,9 +135,9 @@ nav > ul > li a:hover {
     padding: 1rem;
     border-radius: 0.5rem;
     animation: animation_error 10s ease 0s 1 normal forwards;
-  }
-  
-  #error_message_inner {
+}
+
+#error_message_inner {
     cursor: pointer;
     background-color: #dd0012;
     color: #ffffff;
@@ -71,9 +149,9 @@ nav > ul > li a:hover {
     padding: 1rem;
     border-radius: 0.5rem;
     animation: animation_error 10s ease 0s 1 normal forwards;
-  }
-  
-  @keyframes animation_error {
+}
+
+@keyframes animation_error {
     0% {
         opacity: 0;
         transform: translateX(5rem);
@@ -92,9 +170,9 @@ nav > ul > li a:hover {
         transform: translateX(5rem);
         display: none;
     }
-  }
-  
-  @keyframes animation_close_error {
+}
+
+@keyframes animation_close_error {
     0% {
         opacity: 1;
         display: block;
@@ -103,6 +181,4 @@ nav > ul > li a:hover {
         opacity: 0;
         display: none;
     }
-  }
-
-
+}
