--- a/login/formular_style.css
+++ b/login/formular_style.css
@@ -22,20 +22,21 @@ body {
     text-decoration: none;
 }
 #formlog_title{
-    padding-left: 3.25em;
-}
-#form_title {
-    padding-left: 2em;
+   text-align: center;
 }
 #register_button {
     background-color: transparent;
     border: 0;
     color: white;
-    margin-left: 7em;
-    margin-top: 1.5em;
+    justify-content: center;
 }
 #register_button:hover {
     cursor: pointer;
 }
 
 
+#bottom_buttons{
+    margin: auto;
+    width: fit-content;
+    margin-top: 10px;
+}
