--- a/style.css
+++ b/style.css
@@ -122,6 +122,39 @@ nav>ul>li a:hover {
 }
 
 
+/* Scrollbar */
+
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+
+/* Track */
+
+ ::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+
+/* Handle */
+
+ ::-webkit-scrollbar-thumb {
+    background: #888;
+    width: 3px;
+    border-radius: 1px;
+}
+
+
+/* Handle on hover */
+
+ ::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
+
+
 /* Error box bumms */
 
 #output_message_inner {
